<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/blueindigo"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        tools:ignore="UselessLeaf">

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edt_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register"
            android:hint="@string/input_email"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/edt_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_email_register"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_password_register"
            android:onClick="onClick"
            android:text="@string/register"/>
        <TextView
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_register"
            android:text="@string/i_have_account"/>

        <Button
            android:id="@+id/btn_login_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_below="@id/account"
            android:text="@string/login"/>

    </RelativeLayout>
</ScrollView>